# R2D2

./: README.md
Arduino1/: commands-to-run.txt  temp.sh
Arduino1/LCD display/HelloWorld/: HelloWorld.ino
Arduino1/microphone/sketch_aug18a/: sketch_aug18a.ino
Arduino1/no_node/basic_communication/: sender.cpp  test
Arduino1/no_node/combo/: combo.ino
Arduino1/no_node/noROS/: noROS.ino
Arduino1/no_node/noROS_servo_readings/: noROS_servo_readings.ino
Arduino1/no_node/simple-C++ modified/: main.cpp  run  test
Arduino1/no_node/sketch_jun17a/: sketch_jun17a.ino
Arduino1/nod_2_channels/sketch_jun13c/: sketch_jun13c.ino
Arduino1/node/: node.ino
Arduino1/node_motorcontrol/: node_motorcontrol.ino
Arduino1/node_servo2/sketch_jun13a/: sketch_jun13a.ino
Arduino1/node_servo2_advanced/sketch_jun13c/: sketch_jun13c.ino
Arduino1/node_servo2_advanced2/sketch_jun13c/: sketch_jun13c.ino
Arduino1/node_servo2_advanced3/sketch_jun13c/: sketch_jun13c.ino
Arduino1/node_servo2_advanced4/sketch_jun13c/: sketch_jun13c.ino
Arduino1/rosserial_led_button/sketch_jun07a/: sketch_jun07a.ino
Arduino1/rosserial_test/sketch_jun13a/: sketch_jun13a.ino
Arduino1/send_json/: send_json.ino
Arduino1/tests/servo_test/: servo_test.ino
Arduino1/tests/ultrasonic_test/: ultrasonic_test.ino
RaspBerry/: connect_ssh.txt  recieve_json.py
RaspBerry/Camera/: CMakeLists.txt
RaspBerry/Camera/src/: camera.cpp
RaspBerry/camera-actuation2/: CMakeLists.txt  object_detection_yolo.cpp  yolo_out_cpp.avi
RaspBerry/camera-actuation2/weights/: coco.names
RaspBerry/camera-actuation3/: message.cpp  message.hpp  object_detection_yolo.cpp
RaspBerry/camera-actuation3/weights/: yolov3.cfg
RaspBerry/camera-nocommunication/: coco.names  object_detection_yolo.cpp  yolov3.cfg
RaspBerry/detect_ball2/detectball/: README.md  detectball.cpp
RaspBerry/detectball/: CMakeLists.txt  detectball.cpp  how_to_run.txt
RaspBerry/object-tracker/src/: CMakeLists.txt  ObjectTracker.cpp
connect_bluetooth/: connect_bluetooth.sh
programs/C++implementation/my_project2/: CMakeLists.txt  test.cpp
programs/C++implementation_ncurser2/my_project2/: main.cpp  test.cpp
reminders/: packages.txt
weights_handgestures_yolo/Normal_trained/: yolov3-tiny-custom.cfg
(+38 files in other folders)
